@@ -13,6 +13,16 @@ using namespace qpp;
 ///       std::optional<idx> pos_dit = std::nullopt)
 TEST(qpp_QCircuit_add_circuit, AllTests) {}
 /******************************************************************************/
+/// BEGIN QCircuit& QCircuit::add_circuit_inplace_left(QCircuit other,
+///       const std::vector<idx>& target,
+///       std::optional<idx> pos_dit = std::nullopt)
+TEST(qpp_QCircuit_add_circuit_inplace_left, AllTests) {}
+/******************************************************************************/
+/// BEGIN QCircuit& QCircuit::add_circuit_inplace_right(QCircuit other,
+///       const std::vector<idx>& target,
+///       std::optional<idx> pos_dit = std::nullopt)
+TEST(qpp_QCircuit_add_circuit_inplace_right, AllTests) {}
+/******************************************************************************/
 /// BEGIN QCircuit& QCircuit::add_dit(idx n = 1, idx i = -1)
 TEST(qpp_QCircuit_add_dit, AllTests) {}
 /******************************************************************************/
@@ -240,16 +250,6 @@ TEST(qpp_QCircuit_is_measurement_dit, AllTests) {}
 /// BEGIN QCircuit& QCircuit::kron(QCircuit qc)
 TEST(qpp_QCircuit_kron, AllTests) {}
 /******************************************************************************/
-/// BEGIN QCircuit& QCircuit::match_circuit_left(QCircuit other,
-///       const std::vector<idx>& target,
-///       std::optional<idx> pos_dit = std::nullopt)
-TEST(qpp_QCircuit_match_circuit_left, AllTests) {}
-/******************************************************************************/
-/// BEGIN QCircuit& QCircuit::match_circuit_right(QCircuit other,
-///       const std::vector<idx>& target,
-///       std::optional<idx> pos_dit = std::nullopt)
-TEST(qpp_QCircuit_match_circuit_right, AllTests) {}
-/******************************************************************************/
 /// BEGIN QCircuit& QCircuit::measureV(const cmat& V,
 ///       const std::vector<idx>& target, idx c_reg, bool destructive = true,
 ///       std::optional<std::string> name = std::nullopt)
@@ -342,6 +342,16 @@ TEST(qpp_QCircuit_was_measured_nd, AllTests) {}
 ///       bigint pos_qudit, std::optional<idx> pos_dit = std::nullopt)
 TEST(qpp_add_circuit, AllTests) {}
 /******************************************************************************/
+/// BEGIN inline QCircuit add_circuit_inplace_left(QCircuit qc1, const QCircuit& qc2,
+///       const std::vector<idx>& target,
+///       std::optional<idx> pos_dit = std::nullopt)
+TEST(qpp_add_circuit_inplace_left, AllTests) {}
+/******************************************************************************/
+/// BEGIN inline QCircuit add_circuit_inplace_right(QCircuit qc1, const QCircuit& qc2,
+///       const std::vector<idx>& target,
+///       std::optional<idx> pos_dit = std::nullopt)
+TEST(qpp_add_circuit_inplace_right, AllTests) {}
+/******************************************************************************/
 /// BEGIN inline QCircuit adjoint(QCircuit qc)
 TEST(qpp_adjoint, QCircuitAllTests) {}
 /******************************************************************************/
@@ -352,16 +362,6 @@ TEST(qpp_kron, QCircuitAllTests) {}
 ///       bool omit_measurements = true, idx d = 2,
 ///       std::optional<std::string> name = "qpe")
 TEST(qpp_qpe_circuit, AllTests) {}
-/******************************************************************************/
-/// BEGIN inline QCircuit match_circuit_left(QCircuit qc1, const QCircuit& qc2,
-///       const std::vector<idx>& target,
-///       std::optional<idx> pos_dit = std::nullopt)
-TEST(qpp_match_circuit_left, AllTests) {}
-/******************************************************************************/
-/// BEGIN inline QCircuit match_circuit_right(QCircuit qc1, const QCircuit& qc2,
-///       const std::vector<idx>& target,
-///       std::optional<idx> pos_dit = std::nullopt)
-TEST(qpp_match_circuit_right, AllTests) {}
 /******************************************************************************/
 /// BEGIN inline QCircuit replicate(QCircuit qc, idx n)
 TEST(qpp_replicate, AllTests) {}
